k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radio-room
  namespace: radio-room
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: radio-room
